--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,9 +1,9 @@
 name: beaver
 summary: Beaver is an MIT licensed python daemon that munches on logs and sends their contents to logstash.
-maintainer: fabricematrat <fabricematrat@gmail.com>
+maintainer: Fabrice Matrat <fabrice.matrat@canonical.com>
 description: |
-  Beaver provides an lightweight method for shipping local log files to Logstash. 
-  It does this using redis, zeromq, tcp, udp, rabbit or stdout as the transport. 
+  Beaver provides an lightweight method for shipping local log files to Logstash.
+  It does this using redis, zeromq, tcp, udp, rabbit or stdout as the transport.
   This means you’ll need a redis, zeromq, tcp, udp, amqp or stdin input somewhere down the road to get the events.
 tags:
   - ops
